converted to maven

--- a/MyNCS/src/main/webapp/WEB-INF/web.xml
+++ b/MyNCS/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,10 @@
 		<servlet-name>LogoutServlet</servlet-name>
 		<url-pattern>/Logout</url-pattern>
 	</servlet-mapping>
+	
+	<!-- Custom error page for 404 (Not Found) -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/404.jsp</location>
+    </error-page>
 </web-app>
